Добавила сортировку и пагинацию
