# app/Http/Controllers/Api/EmptyPrizeController.php
@@ -8,6 +8,7 @@ use App\Http\Requests\StoreEmptyPrizeRequest;
 use App\Http\Requests\UpdateEmptyPrizeRequest;
 use App\Models\UserPrize;
 use App\Services\ActiveWheelService;
+use Illuminate\Http\Request;
 
 class EmptyPrizeController extends Controller
 {
@@ -26,6 +27,34 @@ class EmptyPrizeController extends Controller
      *    summary="Получение списка пустых призов",
      *    tags={"Пустые призы"},
      *    security={{"bearerAuth":{"role": "admin"} }},
+     *    @OA\Parameter(
+    *         name="sort",
+    *         in="query",
+    *         description="Поле для сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", default="id")
+    *     ),
+    *     @OA\Parameter(
+    *         name="order",
+    *         in="query",
+    *         description="Порядок сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", enum={"asc", "desc"}, default="asc")
+    *     ),
+    *    @OA\Parameter(
+    *         name="per_page",
+    *         description="Количество элементов на странице (по умолчанию 10)",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *    @OA\Parameter(
+    *         name="page",
+    *         description="Страница",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
      *
      *    @OA\Response(
      *        response=200,
@@ -52,9 +81,17 @@ class EmptyPrizeController extends Controller
      *    
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        return EmptyPrize::all();
+        $query = EmptyPrize::query();
+        $sortField = $request->input('sort', 'id');
+        $sortOrder = $request->input('order', 'asc');
+        $query->orderBy($sortField, $sortOrder);
+
+        $perPage = $request->input('per_page', 10);
+        $emptyPrizes = $query->paginate($perPage);
+
+        return response()->json($emptyPrizes, 200);
     }
 
     /**
