# app/Http/Controllers/Api/MaterialThingController.php
@@ -8,6 +8,7 @@ use App\Http\Requests\StoreMaterialThingRequest;
 use App\Http\Requests\UpdateMaterialThingRequest;
 use App\Models\UserPrize;
 use App\Services\ActiveWheelService;
+use Illuminate\Http\Request;
 
 class MaterialThingController extends Controller
 {
@@ -27,6 +28,34 @@ class MaterialThingController extends Controller
      *    summary="Получение списка вещей",
      *    tags={"Вещи"},
      *    security={{"bearerAuth":{"role": "admin"} }},
+     *    @OA\Parameter(
+    *         name="sort",
+    *         in="query",
+    *         description="Поле для сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", default="id")
+    *     ),
+    *     @OA\Parameter(
+    *         name="order",
+    *         in="query",
+    *         description="Порядок сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", enum={"asc", "desc"}, default="asc")
+    *     ),
+    *    @OA\Parameter(
+    *         name="per_page",
+    *         description="Количество элементов на странице (по умолчанию 10)",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *    @OA\Parameter(
+    *         name="page",
+    *         description="Страница",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
      *
      *    @OA\Response(
      *        response=200,
@@ -53,9 +82,17 @@ class MaterialThingController extends Controller
      *    
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        return MaterialThing::all();
+        $query = MaterialThing::query();
+        $sortField = $request->input('sort', 'id');
+        $sortOrder = $request->input('order', 'asc');
+        $query->orderBy($sortField, $sortOrder);
+
+        $perPage = $request->input('per_page', 10);
+        $things = $query->paginate($perPage);
+
+        return response()->json($things, 200);
     }
 
     /**
