# app/Http/Controllers/Api/PromocodeController.php
@@ -8,7 +8,7 @@ use App\Http\Requests\StorePromocodeRequest;
 use App\Http\Requests\UpdatePromocodeRequest;
 use App\Models\UserPrize;
 use App\Services\ActiveWheelService;
-use DateTime;
+use Illuminate\Http\Request;
 
 class PromocodeController extends Controller
 {
@@ -27,6 +27,34 @@ class PromocodeController extends Controller
      *    summary="Получение списка промокодов",
      *    tags={"Промокоды"},
      *    security={{"bearerAuth":{"role": "admin"} }},
+     *    @OA\Parameter(
+    *         name="sort",
+    *         in="query",
+    *         description="Поле для сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", default="id")
+    *     ),
+    *     @OA\Parameter(
+    *         name="order",
+    *         in="query",
+    *         description="Порядок сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", enum={"asc", "desc"}, default="asc")
+    *     ),
+    *    @OA\Parameter(
+    *         name="per_page",
+    *         description="Количество элементов на странице (по умолчанию 10)",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *    @OA\Parameter(
+    *         name="page",
+    *         description="Страница",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
      *
      *    @OA\Response(
      *        response=200,
@@ -53,9 +81,17 @@ class PromocodeController extends Controller
      *    )
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        return Promocode::all();
+        $query = Promocode::withCount('codes');
+        $sortField = $request->input('sort', 'id');
+        $sortOrder = $request->input('order', 'asc');
+        $query->orderBy($sortField, $sortOrder);
+
+        $perPage = $request->input('per_page', 10);
+        $promocodes = $query->paginate($perPage);
+
+        return response()->json($promocodes, 200);
     }
 
     /**
