# app/Http/Controllers/Api/PromocodesCodeController.php
@@ -7,6 +7,7 @@ use App\Models\PromocodesCode;
 use App\Models\Promocode;
 use App\Http\Requests\StorePromocodesCodeRequest;
 use App\Http\Requests\UpdatePromocodesCodeRequest;
+use Illuminate\Http\Request;
 
 class PromocodesCodeController extends Controller
 {
@@ -27,10 +28,40 @@ class PromocodesCodeController extends Controller
      *    summary="Получение списка кодов промокодов",
      *    tags={"Коды промокодов"},
      *    security={{"bearerAuth":{"role": "admin"} }},
-     *
-     *    @OA\Response(
-     *        response=200,
-     *        description="ОК",
+     * 
+     *    @OA\Parameter(
+    *         name="sort",
+    *         in="query",
+    *         description="Поле для сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", default="id")
+    *     ),
+    *     @OA\Parameter(
+    *         name="order",
+    *         in="query",
+    *         description="Порядок сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", enum={"asc", "desc"}, default="asc")
+    *     ),
+    *    @OA\Parameter(
+    *         name="per_page",
+    *         description="Количество элементов на странице (по умолчанию 10)",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *    @OA\Parameter(
+    *         name="page",
+    *         description="Страница",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *   
+    *
+    *    @OA\Response(
+    *        response=200,
+    *        description="ОК",
      *        @OA\JsonContent(
      *            type="array",
      *            @OA\Items(ref="#/components/schemas/PromocodesCode")
@@ -53,9 +84,16 @@ class PromocodesCodeController extends Controller
      *    )
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        return PromocodesCode::all();
+        $query = PromocodesCode::query();
+        $sortField = $request->input('sort', 'id');
+        $sortOrder = $request->input('order', 'asc');
+        $query->orderBy($sortField, $sortOrder);
+
+        $perPage = $request->input('per_page', 10);
+        $promocodesCodes = $query->paginate($perPage);
+        return response()->json($promocodesCodes, 200);
     }
 
     /**
