# app/Http/Controllers/Api/SectorController.php
@@ -12,6 +12,7 @@ use App\Http\Requests\StoreSectorRequest;
 use App\Http\Requests\UpdateSectorRequest;
 use App\Enums\StatusWheelType;
 use App\Services\PrizeTypeService;
+use Illuminate\Http\Request;
 
 class SectorController extends Controller
 {
@@ -42,6 +43,34 @@ class SectorController extends Controller
      *    summary="Получение списка секторов",
      *    tags={"Секторы"},
      *    security={{"bearerAuth":{"role": "admin"} }},
+     *    @OA\Parameter(
+    *         name="sort",
+    *         in="query",
+    *         description="Поле для сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", default="id")
+    *     ),
+    *     @OA\Parameter(
+    *         name="order",
+    *         in="query",
+    *         description="Порядок сортировки",
+    *         required=false,
+    *         @OA\Schema(type="string", enum={"asc", "desc"}, default="asc")
+    *     ),
+    *    @OA\Parameter(
+    *         name="per_page",
+    *         description="Количество элементов на странице (по умолчанию 10)",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
+    *    @OA\Parameter(
+    *         name="page",
+    *         description="Страница",
+    *         required=false,
+    *         in="query",
+    *         @OA\Schema(type="integer")
+    *     ),
      *
      *        @OA\Response(
      *        response=200,
@@ -67,9 +96,16 @@ class SectorController extends Controller
      *    )
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        $sectors = Sector::with('prize')->get();
+        $query = Sector::with('prize');
+        $sortField = $request->input('sort', 'id');
+        $sortOrder = $request->input('order', 'asc');
+        $query->orderBy($sortField, $sortOrder);
+
+        $perPage = $request->input('per_page', 10);
+        $sectors = $query->paginate($perPage);
+
         if(!$sectors->isEmpty()){
             foreach($sectors as $item){
                 $item->prize_type = PrizeTypeService::classToString($item->prize_type);
